# openeuler-yuanrong

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  CLAUDE.md  CMakeLists.txt  Doxyfile  Makefile  README.md  WORKSPACE  benchmark.py  build.sh  check_tools.sh  install_tools.sh
api/cpp/: BUILD.bazel
api/cpp/example/: Affinity.rst  BUILD.bazel  Cancel.rst  InvokeOptions.rst  WORKSPACE  affinity_example.cpp  build.sh  cancel_example.cpp  cpp_instance_example.cpp  cross_lang_example.cpp  faas_example.cpp  function_example.cpp  get_instnce.cpp  get_put_example.cpp  init_and_finalize_example.cpp  instance_example.cpp  java_instance_example.cpp  kv_example.cpp  kv_set_example.cpp  kv_write_and_read_example.cpp  object_example.cpp  parallel_for_example.cpp  py_function_example.cpp  py_instance_example.cpp  pycallee.py  range_example.cpp  run.sh  runtime_env_example.cpp  runtime_env_example1.cpp  save_and_load_state.cpp  ssl_example.cpp  stream_example.cpp  wait_example.cpp  yr_recover_example.cpp  yr_shutdown_example.cpp  yr_state_example.cpp
api/cpp/src/: cluster_mode_runtime.cpp  cluster_mode_runtime.h  code_manager.cpp  code_manager.h  config_manager.cpp  config_manager.h  datasystem_buffer.cpp  datasystem_buffer.h  exception.cpp  function_manager.cpp  group.cpp  hetero_exception.cpp  hetero_future.cpp  hetero_future.h  internal.h  local_mode_runtime.cpp  local_state_store.cpp  mutable_buffer.cpp  object_store.cpp  read_only_buffer.h  runtime_env.cpp  runtime_env_parse.cpp  runtime_env_parse.h  runtime_manager.cpp  state_loader.cpp  state_loader.h  stream_pubsub.cpp  stream_pubsub.h  wait_request_manager.cpp  yr.cpp
api/go/: BUILD.bazel  README.md  go.mod  go.sum
api/go/example/: actor_example.go  actor_example_exception.go  entrance_example.go  kv_example.go  put_get_wait_example.go  stream_example.go  task_example.go  test_exception.go
api/go/faassdk/: entrance.go  entrance_test.go  faashandler.go  faashandler_test.go  runtime.go  runtime_test.go
api/go/libruntime/: libruntime.go  libruntime_test.go
api/go/posixsdk/: posixhandler.go  posixhandler_test.go  runtime.go  runtime_test.go
api/go/runtime/: system_function_bootstrap  yr_runtime_main.go  yr_runtime_main_test.go
api/go/yr/: actorhandler.go  actorhandler_test.go  cluster_mode_runtime.go  cluster_mode_runtime_test.go  config.go  config_manager.go  config_manager_test.go  config_test.go  function_handler.go  function_handler_test.go  instance_creator.go  instance_creator_test.go  instance_function_handler.go  instance_function_handler_test.go  named_instance.go  named_instance_test.go  object_ref.go  object_ref_test.go  runtime.go  runtime_holder.go  runtime_holder_test.go  runtime_test.go  stacktrace.go  stacktrace_test.go  stream.go  stream_test.go  utils.go  utils_test.go  yr.go  yr_test.go
api/java/: BUILD.bazel  README.md  pom.xml
api/java/example/: CppFunctionExample.java  FinalizeExample.java  FunctionExample.java  GetExample.java  GoInstanceExample.java  GroupExample.java  InitExample.java  InstanceExample.java  InstanceFunctionExample.java  JavaInstanceExample.java  OptionsExample.java  SetContextExample.java  SetUrnExample.java  VoidFunctionExample.java  WaitExample.java
api/java/faas-function-sdk/: pom.xml
api/java/function-common/: pom.xml
api/java/yr-api-sdk/: pom.xml
api/python/: BUILD.bazel  README.md  functionsdk.py  requirements.txt  requirements_for_py36.txt  requirements_for_py37.txt  server.py  setup.py
api/python/yr/: apis.py  (+28 more)
bazel/: boost.bzl  datasystem_sdk.bzl  etcd.BUILD  gloo.bzl  grpc_extra_deps.bzl  grpc_upb_repository.bzl  hazel_workspace.bzl  jacoco.bzl  local_patched_repository.bzl  metrics_sdk.bzl  msgpack.bzl  nlohmann_json.bzl  openssl.bazel  preload_grpc.bzl  preload_opentelemetry.bzl  securec.bzl  spdlog.bzl  yr.bzl  yr_go.bzl  yr_java.bzl
go/proto/: CMakeLists.txt
src/proto/: BUILD.bazel  libruntime.proto  socket.proto
src/utility/: BUILD.bazel  file_watcher.cpp  file_watcher.h  id_generator.cpp  id_generator.h  json_utility.h  macro.h  memory.cpp  memory.h  notification_utility.h  singleton.h  string_utility.h  thread_pool.cpp  thread_pool.h  time_measurement.cpp  time_measurement.h  timer_worker.cpp  timer_worker.h
test/: BUILD.bazel  cpp_tsan.supp  test_goruntime_start.sh
test/api/: api_test.cpp  cluster_mode_runtime_test.cpp  code_manager_test.cpp  config_manager_test.cpp  dummy_lib.cpp  exception_test.cpp  function_executor_test.cpp  function_manager_test.cpp  invoke_options_test.cpp  local_mode_test.cpp  object_ref_test.cpp  parallel_for_local_test.cpp  runtime_env_parse_test.cpp  runtime_env_test.cpp  state_loader_test.cpp  stream_pub_sub_test.cpp
test/clibruntime/: clibruntime_test.cpp
test/common/: common.h  mock_libruntime.h
test/dto/: affinity_test.cpp  config_test.cpp  dataobject_test.cpp
test/faas/: faas_executor_test.cpp  function_test.cpp
test/libruntime/: agent_session_manager_test.cpp  alias_routing_test.cpp  async_decre_ref_test.cpp  auto_init_test.cpp  buffer_test.cpp  certs_utils_test.cpp  clients_manager_test.cpp  connect_test.cpp  driverlog_test.cpp  err_type_test.cpp  execution_manager_test.cpp  faas_instance_manager_test.cpp  fiber_test.cpp  fm_client_test.cpp  fs_client_test.cpp  fs_intf_grpc_rw_test.cpp  fs_intf_impl_test.cpp  fs_intf_manager_test.cpp  function_group_test.cpp  generator_test.cpp  group_manager_test.cpp  grpc_utils_test.cpp  gw_client_test.cpp  hash_util_test.cpp  hetero_future_test.cpp  hetero_store_test.cpp  http_client_test.cpp  http_utils_test.cpp  https_client_test.cpp  instance_manager_test.cpp  invoke_adaptor_test.cpp  invoke_order_manager_test.cpp  invoke_spec_test.cpp  kv_state_store_test.cpp  libruntime_config_test.cpp  libruntime_manager_test.cpp  libruntime_test.cpp  limiter_consistant_hash_test.cpp  load_balancer_test.cpp  memory_store_test.cpp  (+17 more)
test/scene/: downgrade_test.cpp
test/st/: prepare_and_start_yr.sh  services.yaml  test.sh  utils.sh
test/utility/: file_watcher_test.cpp  id_test.cpp  memory_test.cpp  string_utility_test.cpp  thread_pool_test.cpp  timer_worker_test.cpp
(+2665 files in other folders)
